<resources>
    <string name="app_name">CSL Mobile Accounts</string>

    <string name="chartOfAccount">Chart of Account</string>
    <string name="title_activity_chart_of_account_input_form">Add Account</string>
    <string name="title_activity_chart_of_account">Chart of Account</string>
    <string name="initial_item">None</string>
    <string name="title_activity_chart_of_account_update">Update Account</string>
    <string name="title_activity_voucher_entry">Voucher Entry</string>
    <string name="title_activity_ledger_report">Ledger Report</string>
    <string name="title_activity_all_transaction">All Transaction</string>
    <string name="title_activity_transaction_details">Transaction Details</string>
    <string name="title_activity_income_expense">Income/Expense</string>
    <string name="title_activity_profit_loss">Profit/Loss</string>
    <string name="title_activity_Balance_sheet">Balance Sheet</string>
    <string name="title_activity_help">Help</string>
    <string name="btnSearch">Search</string>
    <string name="btnSave">Save</string>
    <string name="title_activity_csl_home">Cloud Solution ltd</string>
    <string name="Update">update</string>
    <string name="Delete">delete</string>
    <string name="help_menu_title">Help</string>
    <string name="settings_menu_title">Settings</string>
    <string name="csl_web_link">www.cloud-aps.com
        <a href="www.cloud-aps.com" target="_top"></a></string>
    <string name="help">Help</string>
    <string name="settings_title">Settings</string>
    <string name="voucher_entry_help">
            1. Choose account from which are basically CR account - AccFrom (CR):\n\n
        2. Choose account to which are DR account - AccTo (DR):\n\n
        3. Fill all other information about your respective transaction.\n\n
        4. Tap save to save your transaction.\n\n
            You can create, update and delete account head from chart of account section which are located
        in the settings menu section top right of your application.</string>

    <string name="all_transaction_help">1. Choose From date.\n2. Choose to date.\n3. Tap search button.\n\n
            # After taping search button You will see all transaction between from date and to date.\n</string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="lblFrom">From : </string>
    <string name="lblTo">To : </string>
    <string name="lblDate">Date : </string>
    <string name="lblAccFrom">Acc From (Cr)</string>
    <string name="lblAccTo">Acc To (Dr)</string>
    <string name="lblAccName">Acc name: </string>
    <string name="ledgerReportSuggetion">Choose account head\nSet your date range \n then tap search button to see report.</string>
    <string name="radioIncome">Income</string>
    <string name="radioExpense">Expense</string>
    <string name="incomeExpenseSuggetion">Choose income or expense\nand specify your date range then tap search button to see report.</string>
    <string name="profitLossSuggetion">Set your date range first \n then tap search button to see report.</string>

    <string name="balanceSheetSuggetion">Choose date,\nthen tap search button to get Balance report for respective date range</string>
    <string name="btnAdd">Add</string>
    <string name="lblAccType">Acc Type: </string>
    <string name="hintAccountId">Account Id</string>
    <string name="hintAccountName">Account Name</string>
    <string name="btnBackup">Back up</string>
    <string name="btnRestore">Restore</string>
    <string name="btnScheduler">Scheduler</string>
    <string name="column_heading_account">Account</string>
    <string name="column_heading_date">Date</string>
    <string name="column_heading_amount">Amount</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_description">Description</string>
    <string name="hint_bank_cheque">Bank Cheque</string>
    <string name="btn_enter">Enter</string>
    <string name="column_heading_account_name">Account Name</string>
    <string name="column_heading_account_type">Type</string>
    <string name="column_heading_account_id">Id</string>
    <string name="txt_language">Language</string>
    <string name="column_heading_total_amount">Total Amount</string>
    <string name="column_heading_income">Income</string>
    <string name="column_heading_expense">Expense</string>
    <string name="column_heading_total">Total </string>
    <string name="column_heading_cross_account">Date/CrossAcc</string>
    <string name="column_heading_dr">DR</string>
    <string name="column_heading_cr">CR</string>
    <string name="column_heading_balance">Balance</string>
    <string name="txt_opening_balance">Opening Balance :</string>
    <string name="txt_closing_balance">Closing Balance :</string>
    <string name="column_heading_asset">Asset</string>
    <string name="column_heading_liabilities">Liabilities</string>
    <string name="column_heading_summary">Summary</string>
    <string name="txt_total_asset">Total Asset:</string>
    <string name="txt_total_liability">Total Liability:</string>
    <string name="txt_profit">Profit:</string>
    <string name="txt_loss">Loss:</string>
    <string name="title_select_menu">Select menu</string>

    <string-array name="drawer_list">
        <item>Home</item>
        <item>Voucher Entry</item>
        <item>All Transaction</item>
        <item>Ledger Report</item>
        <item>Income/Expense</item>
        <item>Profit/Loss</item>
        <item>Balance Sheet</item>
        <item>Chart Of Account</item>
        <item>Exit</item>
    </string-array>

    <string-array name="language_list">
        <item>Bangla</item>
        <item>English</item>
        <item>Hindi</item>
    </string-array>

    <string-array name="language_code">
        <item>bn</item>
        <item>en</item>
        <item>hi</item>
    </string-array>

    <string name="banner_ad_unit_id">ca-app-pub-2449529566292304/5657530676</string>
    <string name="btn_voucher_entry">Voucher Entry</string>
    <string name="btn_all_transaction">All Transaction</string>
    <string name="btn_ledger_report">Ledger Report</string>
    <string name="btn_income_expense">Income/Expense</string>
    <string name="btn_profit_loss">Profit/Loss</string>
    <string name="btn_balance_Sheet">Balance Sheet</string>


    <color name="blue">#003399</color>
</resources>
