<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cloudsolutionltd.cslMobileAccounts.Activity.ChartOfAccountInputForm">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtType"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/lblAccType"
                android:background="#1160be"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginRight="8dp"/>

            <Spinner
                android:id="@+id/spnType"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAccountId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintAccountId"
                android:inputType="number"
                android:padding="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAccountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:capitalize="sentences"
                android:hint="@string/hintAccountName"
                android:padding="16dp" />
        </android.support.design.widget.TextInputLayout>




        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/btnSave"
            android:layout_gravity="right"
            android:textColor="#ffffff"
            android:background="@drawable/save_button_style" />

    </LinearLayout>
</ScrollView>
