<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navigationMenu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        tools:context="com.cloudsolutionltd.cslMobileAccounts.Activity.AllTransaction">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@drawable/style_btn_all_transaction_voucher_entry"
                android:layout_marginTop="4dp"
                android:text="@string/title_activity_voucher_entry"
                android:textSize="10sp"
                android:textColor="#000000"
                android:padding="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:id="@+id/btnVoucherEntry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3.5"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight=".3"
                            android:background="@drawable/lbl_from_date"
                            android:padding="5dp"
                            android:text="@string/lblFrom"
                            android:textColor="#ffffff"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtFromDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:background="@drawable/txt_from_date"
                            android:gravity="center"
                            android:drawableRight="@android:drawable/ic_menu_my_calendar"
                            android:text="Medium Text"
                            android:textColor="#ffffff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3.5"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight=".3"
                            android:background="@drawable/lbl_todate"
                            android:padding="5dp"
                            android:text="@string/lblTo"
                            android:textColor="#ffffff"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtToDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:background="@drawable/txt_to_date"
                            android:drawableRight="@android:drawable/ic_menu_my_calendar"
                            android:gravity="center"
                            android:text="Medium Text"
                            android:textColor="#ffffff" />
                    </LinearLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_button_style"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/headingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#003399"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtAccountToName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:gravity="left"
                    android:paddingLeft="5dp"
                    android:text="@string/column_heading_account"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTransactionDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:text="@string/column_heading_date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/column_heading_amount"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/listOfAccountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </ScrollView>

    <ListView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:id="@+id/drawerList"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:choiceMode="singleChoice"
        android:divider="@android:color/background_dark"
        android:dividerHeight="1dp"></ListView>
</android.support.v4.widget.DrawerLayout>
