<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navigationMenu">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:padding="5dp"
        tools:context="com.cloudsolutionltd.cslMobileAccounts.Activity.BalanceSheet">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight=".3"
                            android:background="@drawable/lbl_from_date"
                            android:padding="5dp"
                            android:text="@string/lblFrom"
                            android:textColor="#ffffff"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtFromDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:background="@drawable/txt_from_date"
                            android:drawableRight="@android:drawable/ic_menu_my_calendar"
                            android:gravity="center"
                            android:text="Medium Text"
                            android:textColor="#ffffff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight=".3"
                            android:background="@drawable/lbl_todate"
                            android:padding="5dp"
                            android:text="@string/lblTo"
                            android:textColor="#ffffff"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtToDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:background="@drawable/txt_to_date"
                            android:drawableRight="@android:drawable/ic_menu_my_calendar"
                            android:gravity="center"
                            android:text="Medium Text"
                            android:textColor="#ffffff" />
                    </LinearLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:gravity="center"
                    android:background="@drawable/search_button_style"/>

            </LinearLayout>


            <TextView
                android:id="@+id/txtAssetListHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF024589"
                android:gravity="center"
                android:padding="5dp"
                android:text="Asset"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:visibility="gone" />

            <ListView
                android:id="@+id/listAsset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/txtLiabilityListHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF024589"
                android:gravity="center"
                android:padding="5dp"
                android:text="Liabilities"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:visibility="gone" />

            <ListView
                android:id="@+id/listLiability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF024589"
                android:gravity="center"
                android:padding="5dp"
                android:text="Summary"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:layout_marginTop="8dp"
                android:id="@+id/txtSummaryHeading"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFE0FFE3"
                android:gravity="center"
                android:id="@+id/totalAssetLine"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="Total Asset: "
                    android:textColor="#000000"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/txtTotalAsset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight=".5"
                    android:padding="7dp"
                    android:text="1,000.00"
                    android:gravity="right"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFD4D4"
                android:gravity="center"
                android:id="@+id/totalLiabilityLine"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="Total Liability: "
                    android:textColor="#000000"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/txtTotalLiabilities"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_margin="3dp"
                    android:background="#FFFFD4D4"
                    android:padding="7dp"
                    android:text="2,000.00"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000"
                    android:visibility="visible" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFCEE5FD"
                android:gravity="center"
                android:id="@+id/profitOrLossLine"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="Profit/Loss: "
                    android:id="@+id/txtProfitOrLossHeading"
                    android:textColor="#000000"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/txtProfitOrLoss"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_margin="3dp"
                    android:padding="7dp"
                    android:text="3,000.00"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000"
                    android:visibility="visible" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUserHint"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:text="@string/balanceSheetSuggetion"
                android:textColor="#000000"
                android:padding="10dp"/>


        </LinearLayout>

    </ScrollView>

    <ListView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:id="@+id/drawarList"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:choiceMode="singleChoice"
        android:divider="@android:color/background_dark"
        android:dividerHeight="1dp"></ListView>
</android.support.v4.widget.DrawerLayout>
